// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente <GifGrid/> Comparando con el snapshot 1`] = `
<div
  className="container__grid-gif"
>
  <h3
    className="container-title animate__animated animate__flipInX"
  >
     
    DRAGON BALL
     
  </h3>
  <div
    className="loader"
  >
    <m
      stroke="#2B6CB0"
    />
  </div>
  <div
    className="container"
  />
</div>
`;

exports[`Pruebas del componente <GifGrid/> Debe de mostrar items cuando se cargan imagenes de useFetchGrid 1`] = `
<div
  className="container__grid-gif"
>
  <h3
    className="container-title animate__animated animate__flipInX"
  >
     
    DRAGON BALL
     
  </h3>
  <div
    className="loader"
  />
  <div
    className="container"
  >
    <GridGifItem
      id="abc"
      key="abc"
      title="cualquier cosa"
      url="http://alguna-imagen.net/imagen.gif"
    />
    <GridGifItem
      id="a12312"
      key="a12312"
      title="cualquier cosa"
      url="http://alguna-imagen.net/imagen.gif"
    />
  </div>
</div>
`;
